compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@binary_and_or_wrong_type_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/binary_and_or_wrong_type_fail.tapir
---
[E0006] Error: Left hand side has type bool but right hand side has type int
   ╭─[ binary_and_or_wrong_type_fail.tapir:1:9 ]
   │
 1 │ var x = true && 3;
   │         ────┬────  
   │             ╰────── Mismatching types on binary operator
───╯
