compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@extern_fn_shadows_fn_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/extern_fn_shadows_fn_fail.tapir
---
Error: Function with name 'foo' already exists
   ╭─[ extern_fn_shadows_fn_fail.tapir:1:4 ]
   │
 1 │ fn foo() -> int {
   │    ─┬─  
   │     ╰─── Also declared here
   │ 
 5 │ extern fn foo() -> int;
   │           ─┬─  
   │            ╰─── Originally declared here
───╯
